Mobile text wrap fix attempt

--- a/styles.css
+++ b/styles.css
@@ -176,15 +176,35 @@ hr {
         text-align: left;
         width: 100%;
         height: 34px;
-        background-color: #FFFFFF;
         font-size: 12px;
-        cursor: pointer;
-        outline: none;
+        white-space: nowrap;
     }
 
-    .icon {
-        width: 30px;
+    .icon1 {
+        margin-left: 48px;
+        margin-top: 2px;
     }
+    
+    .icon2 {
+        margin-left: 49px;
+        margin-top: 2px;
+    }
+    
+    .icon3 {
+        margin-left: 101px;
+        margin-top: 2px;
+    }
+    
+    .icon4 {
+        margin-left: 99px;
+        margin-top: 2px;
+    }
+    
+    .icon5 {
+        margin-left: 67px;
+        margin-top: 2px;
+    }
+
 }
 
 
